# ecommerce_rag

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
agents/: orchestrator.py  router.py  sql_agent.py  vector_agent.py
database/: __init__.py  connection.py  schemas.py  step1_initialize_db.py  step2_enrich_aspects.py  step2_enrich_aspects2.py  test_10krows.py
evaluation/: debug_eval_rows.py  evaluate_pipeline.py  generate_test_set.py
pipeline/: query_rewriter.py  reranker.py  retriever.py
vector_store/: vector_manager.py
