[project]
name = "crag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "pandas==2.2.1",
    "psycopg2-binary==2.9.9",
    "requests>=2.34.2",
    "sqlalchemy==2.0.28",
    "torch==2.2.1",
    "transformers==4.38.2",
]
