[project]
name = "crag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "groq>=0.37.1",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.8",
    "pandas==2.2.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.12.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=3.1.1",
    "sqlalchemy==2.0.28",
    "torch==2.2.1",
    "transformers==4.38.2",
]
